added some extra demo chrome

--- a/examples/Demo.ipynb
+++ b/examples/Demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -61,10 +61,10 @@
        "```"
       ],
       "text/plain": [
-       "<SYS_ATL.API.Procedure at 0x116c5aa60>"
+       "<SYS_ATL.API.Procedure at 0x1189b7790>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -98,10 +98,10 @@
        "```"
       ],
       "text/plain": [
-       "<SYS_ATL.API.Procedure at 0x116ddcd90>"
+       "<SYS_ATL.API.Procedure at 0x1188d1f70>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -141,10 +141,10 @@
        "```"
       ],
       "text/plain": [
-       "<SYS_ATL.API.Procedure at 0x116e82ac0>"
+       "<SYS_ATL.API.Procedure at 0x118a69df0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -179,10 +179,10 @@
        "```"
       ],
       "text/plain": [
-       "<SYS_ATL.API.Procedure at 0x116e64160>"
+       "<SYS_ATL.API.Procedure at 0x118a49340>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -246,10 +246,10 @@
        "```"
       ],
       "text/plain": [
-       "<SYS_ATL.API.Procedure at 0x116eed130>"
+       "<SYS_ATL.API.Procedure at 0x118a69790>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,6 +258,97 @@
     "blur = blur.split('j',4,['j1','j2'])\n",
     "blur = blur.unroll('j2')\n",
     "blur"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "```c\n",
+       "int _floor_div(int num, int quot) {\n",
+       "  int off = (num<0)? quot-1 : 0;\n",
+       "  return (num-off)/quot;\n",
+       "}\n",
+       "\n",
+       "\n",
+       "// blur2( image : R[n,m] @IN, kernel : R[k_size,k_size] @IN, res : R[n,m] @OUT )\n",
+       "void blur2( int n, int m, int k_size, float* image, float* kernel, float* res) {\n",
+       "  for (int i=0; i < n; i++) {\n",
+       "      for (int j1=0; j1 < _floor_div(m, 4); j1++) {\n",
+       "          if (4 * j1 + 0 < m) {\n",
+       "              res[(i) * m + (4 * j1 + 0)] = 0.0;\n",
+       "          }\n",
+       "          if (4 * j1 + 1 < m) {\n",
+       "              res[(i) * m + (4 * j1 + 1)] = 0.0;\n",
+       "          }\n",
+       "          if (4 * j1 + 2 < m) {\n",
+       "              res[(i) * m + (4 * j1 + 2)] = 0.0;\n",
+       "          }\n",
+       "          if (4 * j1 + 3 < m) {\n",
+       "              res[(i) * m + (4 * j1 + 3)] = 0.0;\n",
+       "          }\n",
+       "      }\n",
+       "  }\n",
+       "  for (int i=0; i < n; i++) {\n",
+       "      for (int j1=0; j1 < _floor_div(m, 4); j1++) {\n",
+       "          if (4 * j1 + 0 < m) {\n",
+       "              for (int k=0; k < k_size; k++) {\n",
+       "                  for (int l=0; l < k_size; l++) {\n",
+       "                      if (i + k >= 1 && i + k - n < 1 && 4 * j1 + 0 + l >= 1 && 4 * j1 + 0 + l - m < 1) {\n",
+       "                          res[(i) * m + (4 * j1 + 0)] += kernel[(k) * k_size + (l)] * image[(i + k - 1) * m + (4 * j1 + 0 + l - 1)];\n",
+       "                      }\n",
+       "                  }\n",
+       "              }\n",
+       "          }\n",
+       "          if (4 * j1 + 1 < m) {\n",
+       "              for (int k=0; k < k_size; k++) {\n",
+       "                  for (int l=0; l < k_size; l++) {\n",
+       "                      if (i + k >= 1 && i + k - n < 1 && 4 * j1 + 1 + l >= 1 && 4 * j1 + 1 + l - m < 1) {\n",
+       "                          res[(i) * m + (4 * j1 + 1)] += kernel[(k) * k_size + (l)] * image[(i + k - 1) * m + (4 * j1 + 1 + l - 1)];\n",
+       "                      }\n",
+       "                  }\n",
+       "              }\n",
+       "          }\n",
+       "          if (4 * j1 + 2 < m) {\n",
+       "              for (int k=0; k < k_size; k++) {\n",
+       "                  for (int l=0; l < k_size; l++) {\n",
+       "                      if (i + k >= 1 && i + k - n < 1 && 4 * j1 + 2 + l >= 1 && 4 * j1 + 2 + l - m < 1) {\n",
+       "                          res[(i) * m + (4 * j1 + 2)] += kernel[(k) * k_size + (l)] * image[(i + k - 1) * m + (4 * j1 + 2 + l - 1)];\n",
+       "                      }\n",
+       "                  }\n",
+       "              }\n",
+       "          }\n",
+       "          if (4 * j1 + 3 < m) {\n",
+       "              for (int k=0; k < k_size; k++) {\n",
+       "                  for (int l=0; l < k_size; l++) {\n",
+       "                      if (i + k >= 1 && i + k - n < 1 && 4 * j1 + 3 + l >= 1 && 4 * j1 + 3 + l - m < 1) {\n",
+       "                          res[(i) * m + (4 * j1 + 3)] += kernel[(k) * k_size + (l)] * image[(i + k - 1) * m + (4 * j1 + 3 + l - 1)];\n",
+       "                      }\n",
+       "                  }\n",
+       "              }\n",
+       "          }\n",
+       "      }\n",
+       "  }\n",
+       "}\n",
+       "\n",
+       "```"
+      ],
+      "text/plain": [
+       "<SYS_ATL.API.MarkDownBlob at 0x118bc9460>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "blur2 = blur.rename('blur2')\n",
+    "blur2.c_code_mkdwn()"
    ]
   },
   {
@@ -273,18 +364,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.1"
   }
  },
  "nbformat": 4,
