testing new pre-commit hook

--- a/examples/im2col.ipynb
+++ b/examples/im2col.ipynb
@@ -5,6 +5,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#blah"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
