fixing issues with examples

--- a/examples/im2col.ipynb
+++ b/examples/im2col.ipynb
@@ -50,6 +50,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -173,7 +178,7 @@
     "# separating what is now a data-marshalling statement from\n",
     "# the actual compute statement in two subsequent\n",
     "# loop nests via fissioning\n",
-    "im2col_conv.fission_after('y[c,r,i] = _',5)"
+    "im2col_conv.fission_after('y[c,r,i] = _',3)"
    ]
   },
   {
@@ -183,6 +188,15 @@
    "outputs": [],
    "source": [
     "im2col_conv = im2col_conv.fission_after('y[c,r,i] = _',5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "im2col_conv"
    ]
   },
   {
