refresh rtml demo

--- a/examples/Blur Demo.ipynb
+++ b/examples/Blur Demo.ipynb
@@ -48,9 +48,9 @@
     "# the following function is written in SYS-ATL\n",
     "@proc\n",
     "def blur(N: size, M: size, K: size,      # size args specify sizes of other arguments\n",
-    "         image  : R[N, M] @ IN,          # an N x M array; for input\n",
-    "         kernel : R[K, K] @ IN,\n",
-    "         res    : R[N, M] @ OUT):        # an N x M array; for output\n",
+    "         image  : R[N, M],          # an N x M array; for input\n",
+    "         kernel : R[K, K],\n",
+    "         res    : R[N, M]):        # an N x M array; for output\n",
     "    \n",
     "    for x in par(0, N):                  # zero out the `res`ult array\n",
     "        for y in par(0, M):\n",
@@ -325,6 +325,13 @@
     "                (128,128)]:\n",
     "    tile_by(n_x,n_y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
