--- a/examples/im2col.ipynb
+++ b/examples/im2col.ipynb
@@ -29,9 +29,9 @@
     "\n",
     "@proc\n",
     "def conv1d(K : size, C : size, W : size, R : size,\n",
-    "           w : R[K,C,R]   @ IN,  # filter kernel weights\n",
-    "           x : R[C,W]     @ IN,  # input signal\n",
-    "           res : R[K,W]   @ OUT, # output signal\n",
+    "           w : R[K,C,R],  # filter kernel weights\n",
+    "           x : R[C,W],    # input signal\n",
+    "           res : R[K,W],  # output signal\n",
     "):\n",
     "    # zero out the result memory\n",
     "    for k_init in par(0,K):\n",
@@ -282,6 +282,13 @@
     "#    matmul == tiled_matmul\n",
     "# by construction."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
