--- a/docs/spork/spork.tex
+++ b/docs/spork/spork.tex
@@ -601,6 +601,9 @@ The barrier may be used for allocation, but we forbid names that conflict with t
 The lane specialization is only allowed as the ``const'' condition of an if statement.
 
 \filbreak
+\myKey{Read/Write/Reduce:} These will not have to change in LoopIR, but the compilation of these will have to substantially modified in order to handle actor kinds and distributed memory (GPU registers).
+
+\filbreak
 \mySub{Spork Compiler Env}
 
 I'll put most of the implementation for CUDA codegen into \lighttt{SporkEnv}, which the main LoopIR compiler will call into at a few critical points.
